--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "start": "node server.js",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -12,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
+    "express": "^5.1.0",
     "lucide-react": "^0.525.0",
     "photoswipe": "^5.4.3",
     "react": "^18.2.0",
