--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "lucide-react": "^0.525.0",
     "photoswipe": "^5.4.3",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-bootstrap-icons": "^1.10.3",
