--- a/public/staticwebapp.config.json
+++ b/public/staticwebapp.config.json
@@ -1,9 +1,18 @@
 {
-  "routes": [
-    {
-      "route": "/*",
-      "serve": "/index.html",
-      "statusCode": 200
+    "routes": [
+        {
+            "route": "/*",
+            "serve": "/index.html",
+            "statusCode": 200
+        }
+    ],
+    "navigationFallback": {
+        "rewrite": "/index.html",
+        "exclude": ["/static/*", "/images/*", "/css/*", "/js/*", "/favicon.ico"]
+    },
+    "responseOverrides": {
+        "404": {
+            "rewrite": "/index.html"
+        }
     }
-  ]
 }
