--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "express": "^5.1.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
     "photoswipe": "^5.4.3",
     "qrcode.react": "^4.2.0",
@@ -25,7 +26,7 @@
     "react-helmet-async": "^2.0.4",
     "react-markdown": "^9.0.1",
     "react-photoswipe-gallery": "^3.0.1",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.30.1",
     "react-syntax-highlighter": "^15.5.0",
     "simplebar-react": "^3.2.4",
     "swiper": "^11.0.7",
